# advent_of_code_2024

./: .gitignore  populate.py  pyproject.toml  scaffold.py
day_1/: main.py
day_10/: main.py
day_11/: main.py
day_12/: main.py
day_13/: main.py
day_14/: main.py
day_15/: main.py
day_16/: main.py
day_17/: input.txt  main.py
day_18/: main.py
day_19/: main.py
day_2/: main.py
day_20/: main.py
day_21/: main-ugly.py  main.py  thoughts
day_22/: main.py
day_23/: main.py
day_24/: main.py
day_25/: main.py
day_3/: main.py
day_4/: main.py
day_5/: main.py
day_6/: main.py
day_7/: main.py
day_8/: main.py
day_9/: main.py
